--- a/Matertis/nbproject/project.properties
+++ b/Matertis/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=matertis.Matertis
+main.class=com.github.tilastokeskus.matertis.Matertis
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
