Refaktorointia; pääasiassa metodien ja muuttujien uudelleennimeämistä.

--- a/Matertis/pom.xml
+++ b/Matertis/pom.xml
@@ -26,6 +26,12 @@
             <artifactId>miglayout</artifactId>
             <version>3.7.4</version>
         </dependency>
+        
+        <dependency>
+            <groupId>pmd</groupId>
+            <artifactId>pmd</artifactId>
+            <version>4.3</version>
+        </dependency>
     </dependencies>
 
     <build>
