Rutkasti refaktorointia ja vähän lisää testejä.

--- a/Matertis/pom.xml
+++ b/Matertis/pom.xml
@@ -57,7 +57,7 @@
                 <version>0.30</version>
                 <configuration>
                     <targetClasses>
-                        <param>com.github.tilastokeskus.matertis.core.*</param>
+                        <param>com.github.tilastokeskus.matertis.core*</param>
                         <param>com.github.tilastokeskus.matertis.util.*</param>
                     </targetClasses>
                     <targetTests>
