--- a/Matertis/pom.xml
+++ b/Matertis/pom.xml
@@ -26,12 +26,6 @@
             <artifactId>miglayout</artifactId>
             <version>3.7.4</version>
         </dependency>
-        
-        <dependency>
-            <groupId>pmd</groupId>
-            <artifactId>pmd</artifactId>
-            <version>4.3</version>
-        </dependency>
     </dependencies>
 
     <build>
@@ -72,10 +66,26 @@
                 <version>2.9.1</version>
             </plugin>
             
+<!--            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-checkstyle-plugin</artifactId>
+                <version>2.13</version>
+            </plugin>-->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>2.13</version>
+                <configuration>
+                    <configLocation>checkstyle.xml</configLocation>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>com.puppycrawl.tools</groupId>
+                        <artifactId>checkstyle</artifactId>
+                        <version>6.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             
             <plugin>
