--- a/Matertis/pom.xml
+++ b/Matertis/pom.xml
@@ -142,7 +142,8 @@
                     <aggregate>true</aggregate>
                 </configuration>
             </plugin>
-            <plugin>
+            
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>2.10.1</version>
@@ -153,7 +154,8 @@
                         </reports>
                     </reportSet>
                 </reportSets>
-            </plugin>
+            </plugin>-->
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -168,7 +170,8 @@
                 <configuration>
                     <configLocation>checkstyle.xml</configLocation>
                 </configuration>
-            </plugin>            
+            </plugin>
+            
             <plugin>
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
@@ -181,6 +184,23 @@
                     <targetTests>
                         <param>com.github.tilastokeskus.matertis.*</param>
                     </targetTests>
+                </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.10.1</version>
+                <configuration>
+                    <doclet>org.umlgraph.doclet.UmlGraphDoc</doclet>
+                    <docletArtifact>
+                        <groupId>org.umlgraph</groupId>
+                        <artifactId>umlgraph</artifactId>
+                        <version>5.6</version>
+                    </docletArtifact>
+                    <additionalparam>-horizontal -attributes -enumconstants -enumerations -operations -types -visibility -inferrel -inferdep -hide java.* -inferrel -collpackages java.util.*</additionalparam>
+<!--                    <additionalparam>-views -all</additionalparam>-->
+                    <useStandardDocletOptions>true</useStandardDocletOptions>
                 </configuration>
             </plugin>
         </plugins>
