--- a/Matertis/pom.xml
+++ b/Matertis/pom.xml
@@ -143,19 +143,6 @@
                 </configuration>
             </plugin>
             
-<!--            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.1</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>javadoc</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>-->
-            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
@@ -198,8 +185,7 @@
                         <artifactId>umlgraph</artifactId>
                         <version>5.6</version>
                     </docletArtifact>
-                    <additionalparam>-horizontal -attributes -enumconstants -enumerations -operations -types -visibility -inferrel -inferdep -hide java.* -inferrel -collpackages java.util.*</additionalparam>
-<!--                    <additionalparam>-views -all</additionalparam>-->
+                    <additionalparam>-views -all</additionalparam>
                     <useStandardDocletOptions>true</useStandardDocletOptions>
                 </configuration>
             </plugin>
